--- a/demo-template/index.html
+++ b/demo-template/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Flexbox</title>
+    <title>Flexbox Demo Template</title>
 
     <link rel="shortcut icon" href="./assets/images/favicon.png">
 
